force-app/main/default/objects/Contract_Line_Item_Approval__c/fields/Old_Cost__c.field-meta.xml
<CustomField>
    <fullName>Old_Cost__c</fullName>
    <formula>IF(OR(ISBLANK(Contract_Line_Item__r.CampaignAppealedLine__r.CampaignName__c),ISNULL(Contract_Line_Item__r.CampaignAppealedLine__r.CampaignName__c)),
&quot;$&quot; + text(ROUND(Contract_Line_Item__r.PricingCost__c,2)),
&quot;$&quot; + text(ROUND(Preceeding_Camp_Cost__c,2))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Old Cost</label>
    <type>Text</type>
</CustomField>