force-app/main/default/objects/Contract_Line_Item_Approval__c/fields/Old_New_Cost__c.field-meta.xml
<CustomField>
    <fullName>Old_New_Cost__c</fullName>
    <description>Contract Line Item Approval Old &amp; New Cost.</description>
    <formula>IF(OR(ISBLANK(Contract_Line_Item__r.CampaignAppealedLine__r.CampaignName__c),ISNULL(Contract_Line_Item__r.CampaignAppealedLine__r.CampaignName__c)),
&quot;$&quot; + text(ROUND(Contract_Line_Item__r.PricingCost__c,2)) + &apos; | &apos; + &quot;$&quot; + &apos;&apos; + text(ROUND(Contract_Line_Item__r.PricingCost__c,2)),
&quot;$&quot; + text(ROUND(Preceeding_Camp_Cost__c,2)) + &apos; | &apos; + &quot;$&quot;+ &apos;&apos; +TEXT(IF(Contract_Line_Item__r.FuturePricingCost__c=0, ROUND(Contract_Line_Item__r.PricingCost__c,2),ROUND(Contract_Line_Item__r.FuturePricingCost__c,2))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Old | New Cost</label>
    <type>Text</type>
</CustomField>