force-app/main/default/objects/Contract_Line_Item_Approval__c/fields/Overall_Duration__c.field-meta.xml
<CustomField>
    <fullName>Overall_Duration__c</fullName>
    <formula>IF( Approval_Sequence__c =2, Actioned_Date__c - Previous_Approval__r.SubmittedUserDateTime__c, NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overall Duration</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>