force-app/main/default/objects/Contract_Line_Item_Approval__c/fields/Owner_Role__c.field-meta.xml
<CustomField>
    <fullName>Owner_Role__c</fullName>
    <description>Role name of the owner. Used to help track if the assigned user is an SM or GM.</description>
    <formula>Owner:User.Role_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Owner&apos;s salesforce role.</inlineHelpText>
    <label>Owner Role</label>
    <type>Text</type>
</CustomField>