force-app/main/default/objects/Contract_Line_Item_Approval__c/fields/Preceeding_Camp_Price__c.field-meta.xml
<CustomField>
    <fullName>Preceeding_Camp_Price__c</fullName>
    <formula>Contract_Line_Item__r.PrecedingCampPrice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Preceeding Camp Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>