force-app/main/default/objects/Contract_Line_Item_Approval__c/fields/Previous_Approval__c.field-meta.xml
<CustomField>
    <fullName>Previous_Approval__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Previous Approval</label>
    <referenceTo>Contract_Line_Item_Approval__c</referenceTo>
    <relationshipLabel>Contract Line Item Approvals</relationshipLabel>
    <relationshipName>Contract_Line_Item_Approvals</relationshipName>
    <type>Lookup</type>
</CustomField>