force-app/main/default/objects/Contract_Line_Item_Approval__c/fields/Previous_Approver__c.field-meta.xml
<CustomField>
    <fullName>Previous_Approver__c</fullName>
    <formula>Previous_Approval__r.Owner:User.FirstName &amp; &quot; &quot; &amp; Previous_Approval__r.Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Previous Approver</label>
    <type>Text</type>
</CustomField>