force-app/main/default/objects/Contract_Line_Item_Approval__c/fields/Previous_Comments__c.field-meta.xml
<CustomField>
    <fullName>Previous_Comments__c</fullName>
    <label>Previous Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>