force-app/main/default/objects/Contract_Line_Item_Approval__c/fields/Price_Guidance__c.field-meta.xml
<CustomField>
    <fullName>Price_Guidance__c</fullName>
    <formula>Contract_Line_Item__r.Guidance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Guidance</label>
    <type>Text</type>
</CustomField>