force-app/main/default/objects/Contract_Line_Item_Approval__c/fields/Pricing_UOM__c.field-meta.xml
<CustomField>
    <fullName>Pricing_UOM__c</fullName>
    <formula>Contract_Line_Item__r.PricingUOM__c  + &apos; | &apos;+ Item_Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UOM | Item</label>
    <type>Text</type>
</CustomField>