force-app/main/default/objects/Contract_Line_Item_Approval__c/fields/PSR_Email__c.field-meta.xml
<CustomField>
    <fullName>PSR_Email__c</fullName>
    <label>PSR Email</label>
    <type>Email</type>
</CustomField>