force-app/main/default/objects/Contract_Line_Item_Approval__c/fields/Published_Price__c.field-meta.xml
<CustomField>
    <fullName>Published_Price__c</fullName>
    <formula>Contract_Line_Item__r.PublishedPrice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Published Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>