force-app/main/default/objects/Contract_Line_Item_Approval__c/fields/Reason_Code__c.field-meta.xml
<CustomField>
    <fullName>Reason_Code__c</fullName>
    <formula>TEXT(Contract_Line_Item__r.Reason_Code__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reason Code</label>
    <type>Text</type>
</CustomField>