force-app/main/default/objects/Contract_Line_Item_Approval__c/fields/Reason_Code_Comments__c.field-meta.xml
<CustomField>
    <fullName>Reason_Code_Comments__c</fullName>
    <formula>Reason_Code__c + &apos; &apos; +  &apos;|&apos; + &apos; &apos; + Reason_Comments__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reason Code | Comments</label>
    <type>Text</type>
</CustomField>