force-app/main/default/objects/Contract_Line_Item_Approval__c/fields/Reason_Comments__c.field-meta.xml
<CustomField>
    <fullName>Reason_Comments__c</fullName>
    <formula>Contract_Line_Item__r.Comments__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reason Comments</label>
    <type>Text</type>
</CustomField>