force-app/main/default/objects/Contract_Line_Item_Approval__c/fields/Req_GTM_Pct__c.field-meta.xml
<CustomField>
    <fullName>Req_GTM_Pct__c</fullName>
    <description>Recquested (Exception) GTM Percentage.</description>
    <label>Req GTM Pct</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>