force-app/main/default/objects/Contract_Line_Item_Approval__c/fields/Req_GTM_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Req_GTM_Percentage__c</fullName>
    <formula>IF(Contract_Line_Item__r.Bracket1Price__c=0,0,(Contract_Line_Item__r.Bracket1Price__c-Contract_Line_Item__r.PrecedingCampCost__c)/Contract_Line_Item__r.Bracket1Price__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Req GTM Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>