force-app/main/default/objects/Contract_Line_Item_Approval__c/fields/Sales_PSR__c.field-meta.xml
<CustomField>
    <fullName>Sales_PSR__c</fullName>
    <formula>Contract_Line_Item__r.zpl__Contract__r.Account.Primary_Sales_Rep_Name__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales PSR</label>
    <type>Text</type>
</CustomField>