force-app/main/default/objects/Contract_Line_Item_Approval__c/fields/Sales_Requested_Price__c.field-meta.xml
<CustomField>
    <fullName>Sales_Requested_Price__c</fullName>
    <description>Sales Requested Price, stamped from the contract line item at creation by process builder, to show a CLIA approver key details needed at time of decision.</description>
    <label>Sales Requested Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>