force-app/main/default/objects/Contract_Line_Item_Approval__c/fields/Sell_Price_to_Price_Band__c.field-meta.xml
<CustomField>
    <fullName>Sell_Price_to_Price_Band__c</fullName>
    <description>Captures key information for decisioning the CLIA. Per Rob on 10/2, &quot;RE: RE: Zilliant Migration to Cloud - Twice Weekly Status Meeting Notes - 09/25/18
Tue, Oct 2
Robbins, Robert (Atlanta, GA) to me, &quot;Mahaffey, Marcelyn D. (Cincinnati, OH)&quot;	, Carter, Cand</description>
    <formula>&quot;Price to Floor: &quot;&amp;TEXT(Sales_Requested_Price__c)&amp;&quot; &quot;&amp; IF(Sales_Requested_Price__c&gt;Floor_Price__c ,&quot;&gt;&quot;,IF(Sales_Requested_Price__c&lt;Floor_Price__c,&quot;&lt;&quot;,&quot;=&quot;))&amp;&quot; &quot;&amp;TEXT(Floor_Price__c)&amp; BR()&amp;
&quot;Price to Target: &quot;&amp;TEXT(Sales_Requested_Price__c)&amp;&quot; &quot;&amp; IF(Sales_Requested_Price__c&gt;Target_Price__c ,&quot;&gt;&quot;,IF(Sales_Requested_Price__c&lt;Target_Price__c,&quot;&lt;&quot;,&quot;=&quot;))&amp;&quot; &quot;&amp;TEXT(Target_Price__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Sales entered price relative to Floor and Target at the time of approval submission.</inlineHelpText>
    <label>Sell Price to Price Band</label>
    <type>Text</type>
</CustomField>