force-app/main/default/objects/Contract_Line_Item_Approval__c/fields/Set__c.field-meta.xml
<CustomField>
    <fullName>Set__c</fullName>
    <description>Set, stamped from the contract line item at creation by process builder, to show a CLIA approver key details needed at time of decision.</description>
    <label>Set</label>
    <length>100</length>
    <type>Text</type>
</CustomField>