force-app/main/default/objects/Contract_Line_Item_Approval__c/fields/SubmittedUserDateTime__c.field-meta.xml
<CustomField>
    <fullName>SubmittedUserDateTime__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SubmittedUserDateTime</label>
    <type>DateTime</type>
</CustomField>