force-app/main/default/objects/Contract_Line_Item_Approval__c/fields/Subset__c.field-meta.xml
<CustomField>
    <fullName>Subset__c</fullName>
    <description>Subset, stamped from the contract line item at creation by process builder, to show a CLIA approver key details needed at time of decision.</description>
    <label>Subset</label>
    <length>100</length>
    <type>Text</type>
</CustomField>