force-app/main/default/objects/Contract_Line_Item_Approval__c/fields/Timeframe_days__c.field-meta.xml
<CustomField>
    <fullName>Timeframe_days__c</fullName>
    <description>Created by BW to track number of days the assigned approver has to action the record. Populated on creation via a custom setting. This field will be referenced in the due date formula to remove weekends from the assigned timeframe.</description>
    <label>Timeframe days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>