force-app/main/default/objects/Contract_Line_Item_Approval__c/fields/Total_Duration__c.field-meta.xml
<CustomField>
    <fullName>Total_Duration__c</fullName>
    <formula>Duration_Level_1__c + Duration_Level_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>