force-app/main/default/objects/Contract_Line_Item_Approval__c/fields/Vendor_Name__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Name__c</fullName>
    <formula>Contract_Line_Item__r.zpl__Product__r.Legacy_Vendor_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vendor Name</label>
    <type>Text</type>
</CustomField>