force-app/main/default/objects/Contract_Line_Item_Approval__c/recordTypes/CLIA_Closed.recordType-meta.xml
<RecordType>
    <fullName>CLIA_Closed</fullName>
    <active>true</active>
    <description>Created by BW to create Closed CLIA records</description>
    <label>CLIA Closed</label>
</RecordType>