force-app/main/default/objects/Contract_Line_Item_Approval__c/recordTypes/CLIA_Open.recordType-meta.xml
<RecordType>
    <fullName>CLIA_Open</fullName>
    <active>true</active>
    <description>Created by BW to create Open CLIA records</description>
    <label>CLIA Open</label>
</RecordType>