force-app/main/default/objects/Contract_Line_Item_Approval__c/validationRules/Approver_Reject_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Approver_Reject_validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
				OR(
								$Profile.Name =  &apos;Sales Admin - Lightning&apos; ,
		      $Profile.Name =  &apos;Sales Admin Restricted - Lightning&apos;
				),
				OR(
								ISCHANGED(Actioned_By__c),
		      ISCHANGED(Actioned_Date__c),
		      ISCHANGED(Status__c)
				)
)</errorConditionFormula>
    <errorMessage>You do not have access to take this action.</errorMessage>
</ValidationRule>