force-app/main/default/objects/Contract_Line_Item_Approval__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Annual_Sales__c</columns>
    <columns>Division_Account__c</columns>
    <columns>Vendor_Name__c</columns>
    <columns>Campaign_Name__c</columns>
    <columns>Camp_Excep_Date__c</columns>
    <columns>Sales_PSR__c</columns>
    <columns>Pricing_UOM__c</columns>
    <columns>Orig_Rec_Excep_Price__c</columns>
    <columns>Reason_Code_Comments__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OWNER.LAST_NAME</field>
        <operation>equals</operation>
        <value>Kemp</value>
    </filters>
    <label>All</label>
</ListView>