force-app/main/default/objects/Contract_Line_Item_Approval__c/listViews/Item_01476.listView-meta.xml
<ListView>
    <fullName>Item_01476</fullName>
    <columns>NAME</columns>
    <columns>Annual_Sales__c</columns>
    <columns>Division_Account__c</columns>
    <columns>Vendor_Name__c</columns>
    <columns>Campaign_Name__c</columns>
    <columns>Camp_Excep_Date__c</columns>
    <columns>Sales_PSR__c</columns>
    <columns>Pricing_UOM__c</columns>
    <columns>Orig_Rec_Excep_Price__c</columns>
    <columns>Price_Guidance__c</columns>
    <columns>Old_New_Cost__c</columns>
    <columns>Reason_Code_Comments__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </filters>
    <label>Contract Line Item Review</label>
</ListView>