force-app/main/default/objects/Contract_Line_Item_Approval__c/listViews/My_Line_Items_Pending_Approval.listView-meta.xml
<ListView>
    <fullName>My_Line_Items_Pending_Approval</fullName>
    <columns>NAME</columns>
    <columns>Division_Account__c</columns>
    <columns>Vendor_Name__c</columns>
    <columns>Campaign_Name__c</columns>
    <columns>Camp_Excep_Date__c</columns>
    <columns>Sales_PSR__c</columns>
    <columns>Pricing_UOM__c</columns>
    <columns>Orig_Rec_Excep_Price__c</columns>
    <columns>Price_Guidance__c</columns>
    <columns>Old_New_Cost__c</columns>
    <columns>Reason_Code_Comments__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </filters>
    <filters>
        <field>My_CLIA_Submission__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Line Items Pending Approval</label>
</ListView>